    + [NT] Work around a leak in IPC::Run (see #301774).
  * lib/Lintian/Internal/FrontendUtil.pm:
    + [NT] Always use Dpkg::Vendor to determine the default
      vendor.  Previously dpkg-vendor would be preferred if
      available.
  * lib/Lintian/Lab/Entry.pm:
    + [NT] Use the L::Collect during creation instead of
      manually reading the dsc for source packages.
  * lib/Lintian/Tags.pm:
    + [NT] Be explicit about the reason when rejecting an
      override.  Thanks to Yves-Alexis Perez for the report.
      (Closes: #673073)
  * lib/Lintian/Unpacker.pm:
    + [NT] New file.

  * man/lintian.pod.in:
    + [NT] Remove documentation about removed options.

  * reporting/graphs/{statistics,tags}.gpi:
    + [JP] New file.
  * reporting/html_reports:
    + [JP,NT] Generate graphs of the collected history data.
      (Closes: #672273)

  * vendors/ubuntu/main/data/changes-file/known-dists:
    + [NT] Add "raring" as known Ubuntu distribution.  Thanks to
      Dmitry Shachnev.  (LP: #1068208)

 -- Niels Thykier <niels@thykier.net>  Tue, 10 Jul 2012 13:21:56 +0200

lintian (2.5.10.2) unstable; urgency=low

  * checks/po-debconf:
    + [NT] Fix dirhandle leak.
  * checks/source-copyright{,.desc}:
    + [NT] Report the correct line number for the use of commas in
      the "Files" field in DEP-5 copyright files.  Thanks to Faheem
      Mitha for the report.  (Closes: #683946)
    + [NT] Mention that syntax-error-in-dep5-copyright may hide
      other issues as Lintian skips some DEP-5 checks in this case.
      Thanks to Faheem Mitha for the report.

  * frontend/lintian:
    + [NT] Fix typo of identifier method, which causes Lintian to
      crash in case a "coll" cannot be started or it fails.

  * lib/Lintian/Profile.pm:
    + [NT] Use "closedir" rather than "close" to close a dir
      handle.

 -- Niels Thykier <niels@thykier.net>  Mon, 17 Sep 2012 11:56:18 +0200

lintian (2.5.10.1) unstable; urgency=low

  * checks/fields.desc: